Fix for bug 373482 - Camino crashes [@ -[CHOptionSelector selectOption:] ]. r=stuart.morgan@alumni.case.edu, sr=pink